tdf#162314 sw: Fix hang while laying out bidi portions with underflow

Regression from 04184aa7e3aada8f4d938d20dfdb54b3a7dd3896
(tdf#157829 sw: Implemented line break underflow for bidi portions)

Change-Id: If5d550bd6e0f1099bc37532b2172436c12805104
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171432
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins